Iron Gallery/iron-db-service.yaml
apiVersion: v1
kind: Service
metadata:  creationTimestamp: null
  labels:
    db: mariadb
  name: iron-db-service
spec:
  ports:
  - port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    db: mariadb
status:
  loadBalancer: {}
